# LostAndFound

./: .env.example  .gitignore  README.md  docker-compose.yml  insert_test_user.sql  set_admin.sql
.github/: copilot-instructions.md
backend/: .env.example  alembic.ini  create_admin.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/models/: __init__.py  claim_request.py  found_item.py  lost_item.py  match.py  notification.py  user.py
backend/app/routes/: auth.py  found_items.py  lost_items.py  matches.py
backend/app/schemas/: auth.py  found_item.py  lost_item.py  match.py
backend/app/services/: auth.py
backend/app/utils/: security.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.postgres  init-postgres.sql
frontend/: .env.example  .eslintrc.json  .prettierignore  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ProtectedRoute.tsx  index.ts
frontend/src/components/common/: EmptyState.tsx  ItemCard.tsx  LoadingSpinner.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Sidebar.tsx  index.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Claims.tsx  Dashboard.tsx  FoundItems.tsx  Login.tsx  LostItemDetail.tsx  LostItems.tsx  Matches.tsx  RecordFoundItem.tsx  ReportLostItem.tsx  Settings.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
